--- a/src/app/market/styles.module.css
+++ b/src/app/market/styles.module.css
@@ -80,6 +80,8 @@
     z-index: 3;
     height: max-content;
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
   }
 
