--- a/src/app/vacancies/styles.module.css
+++ b/src/app/vacancies/styles.module.css
@@ -81,6 +81,8 @@
     z-index: 3;
     height: max-content;
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
   }
 
